// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render with: blockquote 1`] = `
<ForwardRef
  type="blockquote"
>
  <blockquote>
    My content for
    blockquote
  </blockquote>
</ForwardRef>
`;

exports[`<Text /> should render with: bold 1`] = `
<ForwardRef
  type="bold"
>
  <strong>
    My content for
    bold
  </strong>
</ForwardRef>
`;

exports[`<Text /> should render with: paragraph 1`] = `
<ForwardRef
  type="paragraph"
>
  <p>
    My content for
    paragraph
  </p>
</ForwardRef>
`;
